new holygrail added

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sergio Cañellas | Holy Grail layout example </title>
-    <meta name="description" content="A common layout example on the web called the 'holy grail' layout">
+    <title>Sergio Cañellas | Holy Grail layout week 02</title>
+    <meta name="description" content="A common layout on the web called the 'holy grail'">
     <meta name="author" content="Sergio Cañellas">    
 </head>
 <body>
     <header>
-        <h1>A Holy Grail Layout Example</h1>
+        <h1>Something like a Holy Grail Layout Example</h1> 
     </header>
     <nav>
         <ul>
