index change added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sergio Canellas | WDD 130</title>
+    <meta name="description" content="This home page is about Sergio Cañellas, who is learning HTML and CSS in the course Web Fundamentals">
+    <meta name="author" content="Sergio Cañellas">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -20,6 +22,11 @@
         <p>Hello! I am Sergio Cañellas, I am from Asunción Paraguay, and 
             I work as Business Intelligence in a telecomunication company</p>
     </main>
+    <aside>
+        <h2>Paraguay</h2>
+        <img src="images/guampas.jpg" alt="Guampa de terere">
+        <p>Paraguay is a small country in the center of South America, it is between Brasil, Argentina and Bolivia. In Paraguay it is always hot, and one of the most popular drinks in the country is the Terere, a drink with cold water and Yerba Mate</p>
+    </aside>
     <footer>
         <p>&#169;2024 👀 Sergio Cañellas 👀 Asunción Paraguay</p>
     </footer>
