--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting site plan | Sergio Cañellas</title>
+    <title>Rafting Site Plan | Sergio Cañellas</title>
     <meta name="description" content="The rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project.">
-    <meta name= "author" content="Sergio Cañellas" >
+    <meta name="author" content="Sergio Cañellas" >
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
 <body>
