--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             <a href="https://www.facebook.com/sergiodaniel.canellas" target="_blank">Facebook profile</a>
          </nav>
     </header>
-    <main>
+    <a>
         <h1>Sergio Cañellas | WDD 130</h1>
         <img src="images/profile.jpeg" alt="Hello, my name is Sergio Cañellas" width="200">
         <p>Hello! I am Sergio Cañellas, I am from Asunción Paraguay, and I work as Business Intelligence in a telecomunication company. Led teams in formulating strategies for prepaid and postpaid products, as well as value-added services (VAS), demonstrating skills for customer retention and revenue maximization. 
             Used tools such as Oracle, MS SQL Server, Microstrategy and Power BI to analyze customer behavior patterns and make data-driven decisions to drive business growth. I led regional projects, such as the implementation of Chevrolet's OnStar service nationwide, demonstrating project management skills and interdepartmental collaboration.
             Negotiated with local and regional partners to guarantee profitable and secure agreements in value-added services and applications to people (A2P), demonstrating the ability to establish strong and beneficial relationships for both parties.</p>
-        <li>
-            <ul class="box"><a href="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/cordoba-argentina/2018/800x500/Cordoba-Argentina-Temple01.jpg" target="_blank">Cordoba Argentina Temple</a></ul>
-            <ul class="box"><a href="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/santiago-chile/800x500/santiago-chile-lds-temple-1085562-wallpaper.jpg" target="_blank">Santiago Chile Temple</a></ul>
-            <ul class="box"><a href="https://churchofjesuschristtemples.org/antofagasta-chile-temple/" target="_blank">Antofagasta Chile Temple</a></ul>
-        </li>
+        <ul class="box">
+            <li><a href="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/cordoba-argentina/2018/800x500/Cordoba-Argentina-Temple01.jpg" target="_blank">Cordoba Argentina Temple</a></li>
+            <li><a href="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/santiago-chile/800x500/santiago-chile-lds-temple-1085562-wallpaper.jpg" target="_blank">Santiago Chile Temple</a></li>
+            <li><a href="https://churchofjesuschristtemples.org/antofagasta-chile-temple/" target="_blank">Antofagasta Chile Temple</a></li>
+        </ul>
     </main>
     <aside class="box">
         <h2>Paraguay</h2>
@@ -39,5 +39,5 @@
         <p>&#169;2024 👀 Sergio Cañellas 👀 Asunción Paraguay</p>
     </footer>
 </body> 
-<!-- 06/may/2024 -->
+<!-- 05/06/2024 -->
 </html>
