--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="https://www.facebook.com/sergiodaniel.canellas" target="_blank">Facebook profile</a>
          </nav>
     </header>
-    <a>
+    <main>
         <h1>Sergio Cañellas | WDD 130</h1>
         <img src="images/profile.jpeg" alt="Hello, my name is Sergio Cañellas" width="200">
         <p>Hello! I am Sergio Cañellas, I am from Asunción Paraguay, and I work as Business Intelligence in a telecomunication company. Led teams in formulating strategies for prepaid and postpaid products, as well as value-added services (VAS), demonstrating skills for customer retention and revenue maximization. 
