new w03 added index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             Used tools such as Oracle, MS SQL Server, Microstrategy and Power BI to analyze customer behavior patterns and make data-driven decisions to drive business growth. I led regional projects, such as the implementation of Chevrolet's OnStar service nationwide, demonstrating project management skills and interdepartmental collaboration.
             Negotiated with local and regional partners to guarantee profitable and secure agreements in value-added services and applications to people (A2P), demonstrating the ability to establish strong and beneficial relationships for both parties.</p>
         <ul class="box">
-                        
+            <li><a href="https://churchofjesuschristtemples.org/antofagasta-chile-temple/photographs/" target="_blank">Antofagasta Chile Temple</a></li>
+            <li><a href="https://churchofjesuschristtemples.org/mendoza-argentina-temple/" target="_blank">Mendoza Argentina Temple</a></li>
+            <li><a href="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/cordoba-argentina/2018/800x500/Cordoba-Argentina-Temple01.jpg" target="_blank">Cordoba Argentina Temple</a></li>            
         </ul>
     </main>
     <aside class="box">
