--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafting Site Plan | Sergio Cañellas</title>
+    <meta name="description" content="This home page is about Sergio Cañellas, who is learning HTML and CSS in the course Web Fundamentals">
+    <meta name="author" content="Sergio Cañellas">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
         <img src="images/logo.png" alt="Rafting site logo">
         <nav>
-            <a href="site-plan-rafting.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
-            <a href="contact_us.html">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
     </header>
     <main>
