--- a/index.html
+++ b/index.html
@@ -18,23 +18,26 @@
             <a href="https://www.facebook.com/sergiodaniel.canellas" target="_blank">Facebook profile</a>
          </nav>
     </header>
-    <main>
-        <h1>Sergio Cañellas | WDD 130</h1>
-        <img src="images/profile.jpeg" alt="Hello, my name is Sergio Cañellas" width="200">
-        <p>Hello! I am Sergio Cañellas, I am from Asunción Paraguay, and I work as Business Intelligence in a telecomunication company. Led teams in formulating strategies for prepaid and postpaid products, as well as value-added services (VAS), demonstrating skills for customer retention and revenue maximization. 
-            Used tools such as Oracle, MS SQL Server, Microstrategy and Power BI to analyze customer behavior patterns and make data-driven decisions to drive business growth. I led regional projects, such as the implementation of Chevrolet's OnStar service nationwide, demonstrating project management skills and interdepartmental collaboration.
-            Negotiated with local and regional partners to guarantee profitable and secure agreements in value-added services and applications to people (A2P), demonstrating the ability to establish strong and beneficial relationships for both parties.</p>
-        <ul class="box">
-            <li><a href="https://churchofjesuschristtemples.org/antofagasta-chile-temple/photographs/" target="_blank">Antofagasta Chile Temple</a></li>
-            <li><a href="https://churchofjesuschristtemples.org/mendoza-argentina-temple/" target="_blank">Mendoza Argentina Temple</a></li>
-            <li><a href="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/cordoba-argentina/2018/800x500/Cordoba-Argentina-Temple01.jpg" target="_blank">Cordoba Argentina Temple</a></li>            
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Paraguay</h2>
-        <img src="images/guampas.jpg" alt="Guampa de terere">
-        <p>Paraguay is a small country in the center of South America, it is between Brasil, Argentina and Bolivia. In Paraguay it is always hot, and one of the most popular drinks in the country is the Terere, a drink with cold water and Yerba Mate</p>
-    </aside>
+    <div class="grid"></div>
+        <main>
+            <h1>Sergio Cañellas | WDD 130</h1>
+            <img src="images/profile.jpeg" alt="Hello, my name is Sergio Cañellas" width="200">
+            <p>Hello! I am Sergio Cañellas, I am from Asunción Paraguay, and I work as Business Intelligence in a telecomunication company. Led teams in formulating strategies for prepaid and postpaid products, as well as value-added services (VAS), demonstrating skills for customer retention and revenue maximization. 
+                Used tools such as Oracle, MS SQL Server, Microstrategy and Power BI to analyze customer behavior patterns and make data-driven decisions to drive business growth. I led regional projects, such as the implementation of Chevrolet's OnStar service nationwide, demonstrating project management skills and interdepartmental collaboration.
+                Negotiated with local and regional partners to guarantee profitable and secure agreements in value-added services and applications to people (A2P), demonstrating the ability to establish strong and beneficial relationships for both parties.</p>
+            <ul class="box">
+                <li><a href="https://churchofjesuschristtemples.org/antofagasta-chile-temple/photographs/" target="_blank">Antofagasta Chile Temple</a></li>
+                <li><a href="https://churchofjesuschristtemples.org/mendoza-argentina-temple/" target="_blank">Mendoza Argentina Temple</a></li>
+                <li><a href="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/cordoba-argentina/2018/800x500/Cordoba-Argentina-Temple01.jpg" target="_blank">Cordoba Argentina Temple</a></li>            
+            </ul>
+        </main>
+
+        <aside class="box">
+            <h2>Paraguay</h2>
+            <img src="images/guampas.jpg" alt="Guampa de terere">
+            <p>Paraguay is a small country in the center of South America, it is between Brasil, Argentina and Bolivia. In Paraguay it is always hot, and one of the most popular drinks in the country is the Terere, a drink with cold water and Yerba Mate</p>
+        </aside>
+</div>
     <footer>
         <p>&#169;2024 👀 Sergio Cañellas 👀 Asunción Paraguay</p>
     </footer>
