--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="https://www.facebook.com/sergiodaniel.canellas" target="_blank">Facebook profile</a>
          </nav>
     </header>
-    <div class="grid"></div>
+    <div class="grid">
         <main>
             <h1>Sergio Cañellas | WDD 130</h1>
             <img src="images/profile.jpeg" alt="Hello, my name is Sergio Cañellas" width="200">
@@ -37,7 +37,7 @@
             <img src="images/guampas.jpg" alt="Guampa de terere">
             <p>Paraguay is a small country in the center of South America, it is between Brasil, Argentina and Bolivia. In Paraguay it is always hot, and one of the most popular drinks in the country is the Terere, a drink with cold water and Yerba Mate</p>
         </aside>
-</div>
+    </div>
     <footer>
         <p>&#169;2024 👀 Sergio Cañellas 👀 Asunción Paraguay</p>
     </footer>
