--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,10 +12,12 @@
     <header>
         <img src="images/logo.png" alt="Rafting site logo">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
+            <ul class="navigation"> 
+                <a href="index.html"> Home </a>
+                <a href="about.html"> About Us </a>
+                <a href="trips.html"> Trips </a>
+                <a href="contact.html"> Contact Us </a>
+            </ul>
         </nav>
     </header>
     <main>
@@ -27,17 +29,23 @@
                 <p>Our purpose is to provide exciting and unforgettable outdoor adventures for adrenaline seekers and nature enthusiasts alike. With a focus on safety, professionalism and environmental management. We want you to have an exciting experience sailing through wild rivers and impressive landscapes. On this website, we want to inspire a love of nature and foster a community of adventure seekers who share our passion for outdoor exploration and sustainable recreation</p>
             </article>
         </div>
-        <section>
-            <h2>History</h2>
-            <p>About our history in wwr</p>
+        <section class="history-section"> 
+            <h2>History</h2>   
+            <div class="history-content">                   
+                <p class="history-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <img src="images/history_1.jpg" alt="History">
+                <p class="history-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>     
         </section>
-        <section>
+        <section class="adventures-section">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/adventure_1.jpg" alt="adventure 1">
-            <img src="images/adventure_2.jpg" alt="adventure 2">
-            <img src="images/adventure_3.jpg" alt="adventure 3">
-            <img src="images/adventure_4.jpg" alt="adventure 4">
-            <img src="images/adventure_5.jpg" alt="adventure 5">
+            <div class="adventures-grid">
+                <figure><img src="images/adventure_1.jpg" alt="adventure 1"><figcaption>Colorado River</figcaption> </figure>
+                <figure><img src="images/adventure_2.jpg" alt="adventure 2"><figcaption>Los Dientes del Diablo</figcaption> </figure>
+                <figure><img src="images/adventure_3.jpg" alt="adventure 3"><figcaption>Adventures for beginners</figcaption> </figure>
+                <figure><img src="images/adventure_4.jpg" alt="adventure 4"><figcaption>Individual adventure</figcaption></figure>
+                <figure><img src="images/adventure_5.jpg" alt="adventure 5"><figcaption>Happiness on the way</figcaption></figure>
+            </div>
         </section>
     </main>
     <footer>
