--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,13 +11,13 @@
 <body>
     <header>
         <img src="images/logo.png" alt="Rafting site logo">
-        <nav>
-            <ul class="navigation"> 
+        <nav class="navigation">
+            
                 <a href="index.html"> Home </a>
                 <a href="about.html"> About Us </a>
                 <a href="trips.html"> Trips </a>
                 <a href="contact.html"> Contact Us </a>
-            </ul>
+            
         </nav>
     </header>
     <main>
