--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Site Plan | Sergio Cañellas</title>
+    <title>Rafting Site Plan About Us | Sergio Cañellas</title>
     <meta name="description" content="This home page is about Sergio Cañellas, who is learning HTML and CSS in the course Web Fundamentals">
     <meta name="author" content="Sergio Cañellas">
     <link rel="stylesheet" href="styles/rafting.css">
