--- a/quiz.html
+++ b/quiz.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz | Sergio Canellas | WDD 130</title>
+    <meta name="description" content="HTML and CSS Quiz">
+    <meta name="author" content="Sergio Cañellas">
     <link rel="stylesheet" href="styles/quiz.css">
 </head>
 <body>
