--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -33,8 +33,10 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
-            <div>
-                    <img src="images/happy_client.png" alt="employees">
+            <div class="image-container">
+                    <img src="images/employee1.jpg" alt="employee1">
+                    <img src="images/employee2.jpg" alt="employee2">
+                    <img src="images/employee3.jpg" alt="employee3">
             </div>
         </div>
        <form>
@@ -64,7 +66,7 @@
                     <input type="checkbox" id="newsletter" name="newsletter">
                 </div>
                 <div class="button-container">
-                    <button class="boton" type="submit">Submit</button>
+                    <button class="boton" type="submit">Send Message</button>
                 </div>
             </fieldset>
             
