--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -66,7 +66,7 @@
                     <input type="checkbox" id="newsletter" name="newsletter">
                 </div>
                 <div class="button-container">
-                    <button class="boton" type="submit">Send Message</button>
+                    <button type="submit">Send Message</button>
                 </div>
             </fieldset>
             
