--- a/wwr/index.html
+++ b/wwr/index.html
@@ -73,6 +73,7 @@
             <a href="https://twitter.com/"><img src="images/X_twitter.webp" alt="X"></a>
             <a href="https://www.instagram.com/"><img src="images/instagram.webp" alt="Instagram"></a>
         </nav>
+        <p><a href="images/home_wireframe.JPG" target="_blank">View Home Page Wireframe</a></p>
     </footer>
 </body>
 </html>
